# InfGr

./: CMakeLists.txt  geometry.cpp  geometry.py  geometry_main.cpp  ray.cpp  ray.hpp
executables/: geometry  imaging  ray
geometry/: geometric_shape.hpp  geometry.cpp  geometry.hpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
imaging/: imaging.cpp
